Update con textos e imagenes

--- a/digital.html
+++ b/digital.html
@@ -52,9 +52,9 @@
             Exlibris
         </div>
         <div class="productos-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, ipsam. Praesentium, asperiores doloribus esse
-            vel eaque enim minima quod sequi non facilis libero cum necessitatibus neque ducimus modi consequuntur
-            laborum!
+            Es una etiqueta o sello grabado que se estampa en el reverso de la tapa de los libros, en la cual consta el
+            nombre del dueño o el de la biblioteca a que pertenece el libro. En ocasiones sirven como un sello personal
+            con el cual una persona se identifica.
         </div>
     </section>
     <section class="grid2"> </section>
