--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div id="nav-right" class="nav-right">
             <a class="nav-item nav-close" onclick="closeNav()">&times;</a>
-            <a href="./productos.html" class="nav-item">Productos</a>
+            <a href="./productos.html" class="nav-item">Foto de producto</a>
             <a href="./retratos.html" class="nav-item">Retratos</a>
             <a href="./proyectos.html" class="nav-item">Proyectos</a>
             <a href="./naturaleza.html" class="nav-item">Naturaleza</a>
@@ -38,7 +38,7 @@
     <header class="header">
         <div onmouseover="mouseStatus(true)" onmouseout="mouseStatus(false)" class="header-container">
             <a href="./productos.html" class="header-left-1 header-left">
-                <div class="header-title">/productos/</div>
+                <div class="header-title">/foto de producto/</div>
             </a>
             <a href="./retratos.html" class="header-right-1 header-right">
                 <div class="header-title">/retratos/</div>
@@ -76,7 +76,7 @@
             se concentra mucho en lo digital, es decir edición o arte digital, así como la toma de fotografías de
             diversos estilos.
         </div>
-    </section>
+    </section> 
     <section class="proyectos">
         <h1 class="proyectos-title">Galería</h1>
         <div class="container">
@@ -90,7 +90,7 @@
                 <p class="redirigir">/exlibris/</p>
             </a>
             <a class="bgimg bgimg-producto" href="./productos.html">
-                <p class="redirigir">/foto-producto/</p>
+                <p class="redirigir">/foto de producto/</p>
             </a>
             <a class="bgimg bgimg-microuniversos" href="./proyectos.html#microuniversos">
                 <p class="redirigir">/microuniversos/</p>
