--- a/retratos.html
+++ b/retratos.html
@@ -46,6 +46,27 @@
             de fotografía: fotografía infantil, de familia o pareja, estilo fine art…
         </div>
     </section>
+
+    <section class="text">
+        <div class="text-container">
+            <div class="text-title">
+                Niño con rayas
+            </div>
+            <div class="text-description">
+                Comencé experimentar con el genero conceptual y tomé esta fotografía en 2018, durante un viaje familiar.
+                Con esta imagen quería experimentar y usar los objetos alrededor mío para ver cómo interactuaban con
+                diferentes personajes. Las rayas son la primera capa en la imagen, están pasando por encima de los ojos
+                del niño y bloqueando su boca. Por esto, la audiencia automáticamente ve el centro de la cara. Creo que
+                eso es lo que hace a la imagen tan llamativa. Considero esta una de mis imágenes favoritas, creo que es
+                muy poderosa, amo la composición y el contraste entre cada capa de la imagen. Estoy orgullosa de esta
+                imagen por haber sido tomada con mi celular, en un momento de inspiración. Adicionalmente, esta foto fue
+                parte de la 19ª exhibición en la "Escuela Activa de Fotografía" campus Querétaro.
+            </div>
+        </div>
+        <div class="text-container text-image">
+        </div>
+    </section>
+
     <section class="grid"> </section>
 
     <section class="productos" id="estudio">
@@ -63,11 +84,54 @@
             Sección dedicada a mis pequeños proyectos de autorretratos.
         </div>
     </section>
+    <section class="text">
+        <div class="text-container">
+            <div class="text-title">
+                Cirugía
+            </div>
+            <div class="text-description">
+                Empecé a experimentar con el genero autoral, por lo que tomé la siguiente foto llamada "Cirugía" en 2019.
+                Esta imagen fue inspirada por cultura popular y el boom acerca del amor propio y estereotipos de la
+                belleza. Por esto hice un auto retrato mezclado con un tipo de actuación y edición digital. Todo esto
+                para representar cómo la gente hace lo que sea para cumplir con los estereotipos cuando en realidad no
+                están seguros de ellos. Yo diría que esta es de mis imágenes favoritas y a la vez de mis menos favoritos
+                retratos, porque me gusta mucho la imagen, composición, y el mensaje, pero no estoy segura de mi ser
+                estando en la foto como personaje principal. Hacer auto retratos es muy difícil para mi por mi ansiedad
+                e inseguridades, pero aun así me represento a mi misma. Esta imagen fue particularmente difícil porque
+                tenía que representar a alguien más y convertirme en esa otra persona fue un proceso nuevo para mí.
+                Finalmente, "Cirugía" fue parte de la 21ª exhibición de fotografía en la "Escuela Activa de Fotografía"
+                campus Querétaro.
+            </div>
+        </div>
+        <div class="text-container text-image text-image-2">
+        </div>
+    </section>
     <section class="grid5"> </section>
 
     <section class="productos" id="fineart">
         <div class="productos-title">
             Retratos Fine Art
+        </div>
+        <div class="productos-description">
+            Estas imágenes fueron hechas como parte de un curso de fotografía que tomé de 2017 a 2019. Estas imágenes
+            fueron
+            parte de una sesión de especialidad en fine art photography en el 4º trimestre llamado Portrait II, cursado
+            en 2018.
+            Como equipo, tuvimos que buscar a un modelo y traer accesorios según el tipo de sesión. Durante la sesión,
+            cada
+            miembro tenía tiempo limitado para tomarle fotos al modelo e incluir objetos y accesorios propios. Decidí
+            explorar
+            sentimientos de tristeza y soledad que uno puede vivir durante la infancia y mezclar esos sentimientos con
+            el genero
+            de arte fina. Lo que se me hace muy interesante, es la mirada en la cara de la niña porque no tiene una
+            expresión
+            clara, aunque tiene una mirada fuerte que confunde a la gente. Disfruté montar el escenario y poner la
+            paleta de
+            colores. La composición está hecha para guiar a la audiencia por la imagen, de arriba hacia abajo.
+            Adicionalmente,
+            esta imagen fue parte de la 18ª exhibición en la "Escuela Activa de Fotografía" en Querétaro y en una
+            exposición
+            llamada "La imagen despierta. Fotografía Joven" en el "Salón de la Plástica Mexicana" en la Ciudad de México.
         </div>
     </section>
     <section class="grid3"> </section>
