--- a/proyectos.html
+++ b/proyectos.html
@@ -50,10 +50,13 @@
             Microuniversos
         </div>
         <div class="productos-description">
-            Un proyecto llevado a foto libro de manera física terminado en noviembre del 2019. Este proyecto pretende
-            representar los diferentes estados de ánimo que se experimentan en un espacio en específico, en este caso,
-            mi habitación. El proyecto es un discurso abstracto sobre u espacio que como “adolecente” es vital, mi
-            habitación es mi universo en el que se experimentan todo tipo de sentimientos y situaciones.
+            Estas fotos son de mi proyecto reciente llamado "Microuniversos". Este proyecto fue hecho en 2019 cuando
+            cursé el octavo trimestre en la "Escuela Activa de Fotografía", con género autoral y conceptual al cual le
+            hice un libro. Con este proyecto, decidí explorar mis emociones en un espacio familiar, mi cuarto. Como mi
+            cuarto es donde paso la mayoría de mi tiempo, decidí representarme a mí misma en él, igual que representar
+            mis diferentes estados y emociones que vivo cuando estoy ahí. Principalmente es una secuencia compuesta por
+            15 imágenes que representan diferentes emociones que tengo en mi cuarto, mi microuniverso. Las imágenes
+            tienden a ir de obscuras a claras, me gusta verlo como un ciclo de emociones.
         </div>
     </section>
     <section class="grid"> </section>
