--- a/proyectos.html
+++ b/proyectos.html
@@ -50,12 +50,12 @@
             Microuniversos
         </div>
         <div class="productos-description">
-            Estas fotos son de mi proyecto reciente llamado "Microuniversos". Este proyecto fue hecho en 2019 cuando
-            cursé el octavo trimestre en la "Escuela Activa de Fotografía", con género autoral y conceptual al cual le
+            Estas fotos son de mi proyecto reciente llamado "Microuniversos". Este proyecto fue hecho en 2019, con
+            género autoral y conceptual al cual le
             hice un libro. Con este proyecto, decidí explorar mis emociones en un espacio familiar, mi cuarto. Como mi
             cuarto es donde paso la mayoría de mi tiempo, decidí representarme a mí misma en él, igual que representar
-            mis diferentes estados y emociones que vivo cuando estoy ahí. Principalmente es una secuencia compuesta por
-            15 imágenes que representan diferentes emociones que tengo en mi cuarto, mi microuniverso. Las imágenes
+            mis diferentes estados y emociones que vivo cuando estoy ahí. Son imágenes que representan diferentes
+            emociones que tengo en mi cuarto, mi microuniverso. Las imágenes
             tienden a ir de obscuras a claras, me gusta verlo como un ciclo de emociones.
         </div>
     </section>
