--- a/digital.html
+++ b/digital.html
@@ -41,7 +41,7 @@
 
     <section class="original">
         <div class="original-title">
-            ¿Quieres una sesión de fotos?
+            Cotizaciones
         </div>
         <div class="original-description">
             Si quieres cotizar tu sesión o este producto, ponte en contacto
